# scripts

./: README.md
aircrack/: speedport-adv.py
odroid/: README.md
odroid/tcu/: .gitignore  Makefile  README.md
odroid/tcu/config/: tcu.conf
odroid/tcu/include/: config.h  ctrl.h  dht22.h  fan.h  gpio.h  params.h  pid.h  tmu.h
odroid/tcu/src/: config.c  ctrl.c  dht22.c  fan.c  gpio.c  main.c  params.c  pid.c  tmu.c
odroid/tcu/systemd/: tcu.service
python/: README.md
python/scheduler/: README.md  latch.py  scheduler.py  scheduler.test.py
python/tcu/: README.md  setup.sh  tcu.py
python/tcu/config/: config.json  default_log.json  systemd_log.json
python/tcu/lib/: config.py  cpu_tmu.py  dht22.py  fan.py  wpi2_gpio.py
python/tcu/systemd/: tcu.service
ubuntu/: README.md  night_lapse_gopro_to_move.sh  nmcli_regenerat_mac_address.sh  open_browser.sh  ping_check.sh
ubuntu/cmac-address/: CMakeLists.txt  README.md
ubuntu/cmac-address/src/: cmacaddress_validator.cpp  cmacaddress_validator.h  i_mac_reader.h  linux_mac_address_reader.cpp  linux_mac_address_reader.h
ubuntu/moviepy/: .gitignore  README.md  cut.py  fps.py  mv.py  speed.py
ubuntu/moviepy/utils/: __init__.py  ffmpeg.py  ffmpeg_exception.py  fs.py  process.py
